# Rechnernetze

./: .gitignore  CMakeLists.txt  README.md
DOCUMENT_ROOT_FOLDER/: index.html
DOCUMENT_ROOT_FOLDER/mydir/: index.html
aufg2/: CMakeLists.txt  README.md  Response.h  connection.cpp  connection.hpp  http_request_builder.cpp  main.cpp  options.hpp  url_info.cpp
aufg2/src/: Response.cpp  Response.h  connection.cpp  connection.hpp  http_request_builder.cpp  http_response.cpp  http_response.h  main.cpp  options.hpp  response.cpp  response.h  url_info.cpp  url_info.hpp
aufg2_3_http/: .gitignore  CMakeLists.txt
aufg2_3_http/connection_base/src/: HttpRequest.cpp  HttpRequest.h  HttpResponse.hpp  logger.hpp
aufg2_3_http/http_server/: CMakeLists.txt  README.md
aufg2_3_http/http_server/src/: helper.hpp  main.cpp  options.hpp
aufg2_3_http/snatch/: README.md
aufg2_3_http/snatch/src/: http_request_builder.h  url_info.cpp
aufg3/: CMakeLists.txt
aufg3/src/: client_connection.cpp  client_connection.hpp  connection_listener.cpp  connection_listener.hpp  main.cpp  options.hpp
aufg4/: CMakeLists.txt  README.md
aufg4/a4.1/: aufgabe4_1.py
aufg4/bft_base/: CMakeLists.txt  Timer.cpp  Timer.hpp  bft_datagram.cpp  bft_datagram.hpp  flags.cpp  flags.hpp  logger.hpp
aufg4/bft_client/: CMakeLists.txt  main.cpp  options.hpp
aufg4/bft_server/: CMakeLists.txt  file_writer.cpp  file_writer.hpp  main.cpp  options.hpp
aufg4/bftp_experiment/: CHANGELOG.md  README.md  experiment.py  requirements.txt
aufg4/bftp_experiment/testfiles/: asciitest.txt  rfc768.txt  test-1KiB.data  test-1MiB.data
connection_base/: CMakeLists.txt
connection_base/src/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.hpp  address.cpp  address.hpp  connection.cpp  connection.hpp  http_response.cpp  http_response.hpp  logger.hpp
helloworld/: CMakeLists.txt  main.c
http_client/: CMakeLists.txt
http_client/src/: connection_listener.cpp  connection_listener.hpp  main.cpp
http_server/: CMakeLists.txt
http_server/src/: connection_listener.cpp  connection_listener.hpp  helper.cpp  helper.hpp  main.cpp  options.hpp  request_builder.cpp  request_builder.h  request_handler.cpp  request_handler.h  response_factory.cpp  response_factory.h
snatch/: CMakeLists.txt  README.md
snatch/src/: connection.cpp  connection.hpp  http_response.h  main.cpp  options.hpp  url_info.cpp  url_info.hpp
test/: README.md  http_server.json  http_server.sh
